--- a/style.css
+++ b/style.css
@@ -1,23 +1,44 @@
-.box{
-    border: 2px solid lightgrey;
-    width: 100px;
-    height: 100px;
+* {
+    box-sizing: border-box;
 }
 
-.box-small{
-    width: 50px;
-    height: 50px;
-    margin-left: 24px;
-}
-
-.box-wrapper{
-    display:flex;
-    align-items: center;
-}
-
-.container{
+.container {
     border: 4px solid lightgrey;
+    padding: 80px 24px 80px 24px;
+}
+
+.row {
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto -24px auto;
     display: flex;
     justify-content: space-between;
-    padding: 24px;
+}
+
+.box {
+    border: 4px solid lightgrey;
+    margin-bottom: 24px;
+}
+
+.box-small {
+    height: 50px;
+}
+
+.box-tiny {
+    width: 30%;
+    height: 50px;
+}
+
+.tiny-wrapper {
+    display: flex;
+    justify-content: space-between;
+}
+
+.box-wrapper {
+    width: 45%;
+    padding-right: 24px;
+}
+
+.box-large {
+    width: 45%;
 }
